// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderCell/> should render 1`] = `
<th
  class="wrapper foo normal"
>
  Foo
</th>
`;

exports[`<HeaderCell/> should render in small size 1`] = `
<th
  class="wrapper foo small"
>
  Foo
</th>
`;

exports[`<HeaderCell/> should render in smallest size 1`] = `
<th
  class="wrapper foo smallest"
>
  Foo
</th>
`;
